<!--
  ~  Copyright (c) 2017. Mycroft AI, Inc.
  ~
  ~  This file is part of Mycroft-Android a client for Mycroft Core.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<resources>
    <string name="app_name">Mycroft-Android</string>
    <string name="action_settings">Settings</string>
    <string name="beacon_activity">Beacon Func</string>
    <string name="ranging_activity">Beacon Range</string>
    <string name="mycroftai">MycroftAI</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_default_ip">Mycroft IP address</string>
    <string name="pref_default_display_ip">192.168.0.2</string>

    <string name="pref_title_app_reader_switch">App Reader</string>
    <string name="pref_summary_app_reader_switch">enable TTS responses</string>

    <string name="pref_title_display_app_reader_switch">App Reader</string>
    <string name="pref_summary_display_app_reader_switch">display App Reader switch on main screen</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="speech_prompt">Say something to Mycroft&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="websocket_connected">Connected to Mycroft!</string>
    <string name="websocket_closed">Connection to Mycroft has closed! Please re-connect and check connection settings!</string>
    <string name="websocket_error">Connection error! Please ensure Mycroft is available and on the same network as your device!</string>

    <string name="connect">Connect</string>
    <string name="discover">Discover</string>
    <string name="register">Register</string>
    <string name="send">Send</string>

    <string name="hello">Hello World!</string>
    <string name="title">Hello Notification!</string>
    <string name="notification_posted">Notification posted</string>
    <string name="pref_default_maximum_retries">1</string>
    <string name="pref_title_maximum_retries">Maximum Retries</string>
    <string name="action_about">About</string>
    <string name="action_home_mycroft_ai">Mycroft Management Website</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_home_mycroft_ai">Home.Mycroft.AI</string>
    <string name="pref_header_about">About</string>
    <string name="version_code_title">Version Code</string>
    <string name="version_name_title">Version Name</string>
    <string name="license_title">License</string>
    <string name="license_value">GPLv3</string>
    <string name="pref_default_display_not_set">not set</string>
    <string name="digit_zero">0</string>

    //Beacon strings
    <string name="location_permission_granted_title">Location Permission set?</string>
    <string name="beacon_pref">Beacon Settings</string>
    <string name="enable_ble_beacon_functionality">BLE beacon functionality:</string>
    <string name="be_a_becaon">Be a beacon!</string>
    <string name="pref_title_uuid">Beacon UUID!</string>
    <string name="default_uuid">234aldf-asdf34-asdf-sdfsdf2</string>
    <string name="beacon_manufacturer">Beacon Manufacturer</string>
    <string-array name="beacon_manufacturer_list">
        <item>"ALTBEACON"</item>
        <item>"IBEACON"</item>
        <item>"EDDYSTONE  TLM"</item>
        <item>"EDDYSTONE  UID"</item>
        <item>"EDDYSTONE  URL"</item>
    </string-array>

    <string-array name="beacon_manufacturer_list_values">
        <item>"m:2-3=beac,i:4-19,i:20-21,i:22-23,p:24-24,d:25-25"</item>
        <item>"m:2-3=0215,i:4-19,i:20-21,i:22-23,p:24-24"</item>
        <item>"x,s:0-1=feaa,m:2-2=20,d:3-3,d:4-5,d:6-7,d:8-11,d:12-15"</item>
        <item>"s:0-1=feaa,m:2-2=00,p:3-3:-41,i:4-13,i:14-19"</item>
        <item>"s:0-1=feaa,m:2-2=10,p:3-3:-41,i:4-20v"</item>
    </string-array>
    <string name="location_request_title">This app needs location access</string>
    <string name="location_request_message">Please grant location access so this app can detect beacons in the background.</string>
    <string name="location_result_title">Functionality limited</string>
    <string name="location_result_message">"Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>
    <string name="verify_bluetooth_not_enabled_title">Bluetooth not enabled</string>
    <string name="verify_bluetooth_not_enabled_message">Please enable bluetooth in settings and restart this application.</string>
    <string name="bluetooth_not_supported_title">Bluetooth LE not available</string>
    <string name="bluetooth_not_supported_message">Sorry, this device does not support Bluetooth LE.</string>
    <string name="default_beacon_layout">m:2-3=0215,i:4-19,i:20-21,i:22-23,p:24-24</string>
</resources>
