<!--
  ~  Copyright (c) 2017. Mycroft AI, Inc.
  ~
  ~  This file is part of Mycroft-Android a client for Mycroft Core.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="locationPermissionGranted"
        android:title="@string/location_permission_granted_title"
        android:defaultValue="@string/pref_default_display_not_set"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/default_uuid"
        android:inputType="textCapWords"
        android:key="uuid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_uuid" />

    <SwitchPreference
        android:id="@+id/beABeacon"
        android:key="beABeaconSwitch"
        android:title="@string/be_a_becaon"
        android:summary="@string/enable_ble_beacon_functionality"
        android:checked="false" />

</PreferenceScreen>
